# mastering_ros

./: README.md
chapter_10_codes/: cube.dae
chapter_10_codes/cool_arm/cool5000_controller/: CMakeLists.txt  package.xml
chapter_10_codes/cool_arm/cool5000_controller/config/: cool5000.yaml  cool5000_trajectory_controller.yaml  dynamixel_ports.yaml
chapter_10_codes/cool_arm/cool5000_controller/launch/: cool5000_controller.launch  joint_state_aggregator.launch
chapter_10_codes/cool_arm/cool5000_controller/scripts/: cool5000_play.py  cool5000_record.py  pose_zero.py  set_all_torque.py
chapter_10_codes/cool_arm/cool5000_controller/src/: joint_state_aggregator.cpp
chapter_10_codes/grasp_object/: model.config  model.sdf
chapter_10_codes/grasp_table/: model.config  model.sdf
chapter_10_codes/mastering_ros_robot_description_pkg/: CMakeLists.txt
chapter_10_codes/moveit_simple_grasps/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
chapter_10_codes/moveit_simple_grasps/action/: GenerateGrasps.action
chapter_10_codes/moveit_simple_grasps/config/: baxter_grasp_data.yaml  clam_grasp_data.yaml  reem_grasp_data.yaml  romeo_grasp_data.yaml
chapter_10_codes/moveit_simple_grasps/include/moveit_simple_grasps/: custom_environment2.h  grasp_data.h  grasp_filter.h  moveit_blocks.h  simple_grasps.h
chapter_10_codes/moveit_simple_grasps/launch/: grasp_filter_test.launch  grasp_generator_server.launch  grasp_test.launch  grasp_test_rviz.launch  simple_grasps.rviz
chapter_10_codes/moveit_simple_grasps/msg/: GraspGeneratorOptions.msg
chapter_10_codes/moveit_simple_grasps/scripts/: server_test.py
chapter_10_codes/moveit_simple_grasps/src/: grasp_data.cpp  grasp_filter.cpp  grasp_filter_test.cpp  simple_grasps.cpp  simple_grasps_server.cpp  simple_grasps_test.cpp
chapter_10_codes/seven_dof_arm_config/: package.xml
chapter_10_codes/seven_dof_arm_test/: CMakeLists.txt  package.xml
chapter_10_codes/seven_dof_arm_test/src/: add_collision_objct.cpp  check_collision.cpp  remove_collision_objct.cpp  test_custom.cpp  test_custom_coord.cpp
chapter_11_codes/abb_irb6640_moveit_plugins/: CMakeLists.txt  abb_irb6640_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
chapter_11_codes/abb_irb6640_moveit_plugins/src/: abb_irb6640_manipulator_ikfast_moveit_plugin.cpp
chapter_11_codes/abb_moveit_plugin/: compute  ikfastdemo.cpp  irb6640.urdf  output_ikfast61.cpp
chapter_1_codes/mastering_ros_demo_pkg/: CHANGELOG.rst  CMakeLists.txt  README.txt  package.xml
chapter_1_codes/mastering_ros_demo_pkg/action/: Demo_action.action
chapter_1_codes/mastering_ros_demo_pkg/launch/: demo_msg.launch  demo_service.launch  demo_topic.launch
chapter_1_codes/mastering_ros_demo_pkg/msg/: demo_msg.msg
chapter_1_codes/mastering_ros_demo_pkg/src/: demo_action_client.cpp  demo_action_server.cpp  demo_msg_publisher.cpp  demo_msg_subscriber.cpp  demo_service_client.cpp  demo_service_server.cpp  demo_topic_publisher.cpp  demo_topic_subscriber.cpp
chapter_1_codes/mastering_ros_demo_pkg/srv/: demo_srv.srv
chapter_3_codes/diff_wheeled_robot_control/: package.xml
chapter_3_codes/diff_wheeled_robot_gazebo/: CMakeLists.txt
chapter_3_codes/mastering_ros_robot_description_pkg/: package.xml
chapter_3_codes/seven_dof_arm_gazebo/: CMakeLists.txt
chapter_4_codes/diff_wheeled_robot_control/: CMakeLists.txt
chapter_4_codes/diff_wheeled_robot_gazebo/: package.xml
chapter_4_codes/seven_dof_arm_config/: .setup_assistant  CMakeLists.txt
chapter_4_codes/seven_dof_arm_gazebo/: package.xml
chapter_4_codes/seven_dof_arm_gazebo/config/: seven_dof_arm_gazebo_control.yaml  seven_dof_arm_gazebo_joint_position.yaml  trajectory_control.yaml
chapter_4_codes/seven_dof_arm_gazebo/launch/: grasp_generator_server.launch  seven_dof_arm_bringup_grasping.launch  seven_dof_arm_bringup_moveit.launch  seven_dof_arm_gazebo_position.launch  seven_dof_arm_world.launch
chapter_4_codes/seven_dof_arm_gazebo/worlds/: grasp_final.sdf
chapter_5_codes/gazebo_basic_world_plugin/: CMakeLists.txt  hello.world  hello_world.cc
chapter_5_codes/nodelet_hello_world/: CMakeLists.txt  hello_world.launch  hello_world.xml  package.xml
chapter_5_codes/nodelet_hello_world/src/: hello_world.cpp
chapter_5_codes/pluginlib_calculator/: CMakeLists.txt  calculator_plugins.xml  package.xml
chapter_5_codes/pluginlib_calculator/include/pluginlib_calculator/: calculator_base.h  calculator_plugins.h
chapter_5_codes/pluginlib_calculator/src/: calculator_loader.cpp  calculator_plugins.cpp
chapter_6_codes/my_controller_pkg/: CMakeLists.txt  controller_plugins.xml  my_controller.yaml  package.xml
chapter_6_codes/my_controller_pkg/include/my_controller_pkg/: my_controller_file.h
chapter_6_codes/my_controller_pkg/launch/: my_controller.launch
chapter_6_codes/my_controller_pkg/src/: my_controller_file.cpp
chapter_6_codes/rviz_telop_commander/: CMakeLists.txt  package.xml  plugin_description.xml
chapter_6_codes/sample_ros_controller/: CMakeLists.txt  package.xml  sample_ros_controller.xml
chapter_6_codes/sample_ros_controller/src/: sample_ros_controller.cpp
chapter_7_codes/ADXL3xx_ROS/: ADXL.fzz  ADXL3xx_ROS.ino
chapter_7_codes/Hello_Publisher/: Hello_Publisher.ino
chapter_7_codes/ROS_Odroid_Examples/blink_led/: CMakeLists.txt  package.xml
chapter_7_codes/ROS_Odroid_Examples/blink_led/src/: blink.cpp  button.cpp
chapter_7_codes/ROS_Odroid_Examples/ros_wiring_examples/: CMakeLists.txt  package.xml
chapter_7_codes/ROS_Odroid_Examples/ros_wiring_examples/src/: blink.cpp  button.cpp
chapter_7_codes/Ultrasonic/: Ultrasonic.ino  Untitled Sketch 2.fzz
chapter_8_codes/: head_camera.yaml  hokuyo_start.launch.txt
chapter_8_codes/cv_bridge_tutorial_pkg/: CMakeLists.txt  package.xml
chapter_8_codes/cv_bridge_tutorial_pkg/src/: sample_cv_bridge_node.cpp
chapter_8_codes/pcl_ros_tutorial/: CMakeLists.txt  package.xml
chapter_8_codes/pcl_ros_tutorial/src/: pcl_filter.cpp  pcl_publisher.cpp  pcl_read.cpp  pcl_write.cpp
chapter_9_codes/: bag_encoder.bag
(+249 files in other folders)
